--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dwsubdownloader",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +12,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.10.0",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "winreg": "^1.2.5"
   }
 }
